--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@
 /ClientLogInSignUp/nbproject/private/
 /ServerLogInSignUp/build/
 /ClientLogInSignUp/build/
+/file/nbproject/private/
+/file/build/
+/file/dist/
+/Verifica/nbproject/private/
